# ramenGPT

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  mlps.py  model.py  optimizers.py  pyproject.toml  run.py  train.py  utils.py
config/: base.py  spectron.py
data/: cached_fineweb100B.py  cached_fineweb10B.py  cached_finewebedu10B.py  fineweb.py
